--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 <p style="text-align: center;"><strong>Welcome to the BT&E RFID TEST DASHBOARD.</strong></p>
 <p style="text-align: center;">Use the tabs above to view detailed information, or click "REFRESH" to update data immediately.</p>
 <p style="text-align: center;">THIS SERVER WILL BE THE MOST RECENT BUT MAY HAVE CRASHES.</p>
-<h3 style="padding-left: 240px;"><strong>Scanable Items-</strong></h3>
+<h3 style="padding-left: 240px;"><strong>Scannable Items-</strong></h3>
 <ul>
 <li style="list-style-type: none;">
 <ul>
